[gd_scene load_steps=13 format=2]

[ext_resource path="res://textures/enemy/EntityBody.png" type="Texture" id=1]
[ext_resource path="res://scripts/PlayerDetection.gd" type="Script" id=2]
[ext_resource path="res://scripts/containers/EnemyContainer.gd" type="Script" id=3]
[ext_resource path="res://objects/Muzzle.tscn" type="PackedScene" id=4]
[ext_resource path="res://objects/Stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/WanderController.gd" type="Script" id=7]
[ext_resource path="res://objects/core/Colors.tscn" type="PackedScene" id=8]
[ext_resource path="res://objects/vanity/Damaged.tscn" type="PackedScene" id=9]

[sub_resource type="CircleShape2D" id=6]
radius = 25.0799

[sub_resource type="CircleShape2D" id=2]
radius = 325.038

[sub_resource type="CircleShape2D" id=7]
radius = 28.0179

[sub_resource type="OccluderPolygon2D" id=5]
polygon = PoolVector2Array( -21, -21, 21, -21, 21, 21, -21, 21 )

[node name="Enemy" type="KinematicBody2D" groups=["mobs"]]
position = Vector2( 4, 4 )
collision_mask = 2
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Damaged" parent="." instance=ExtResource( 9 )]
z_index = 15
texture = ExtResource( 1 )

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 6 )

[node name="RayCast2D" type="RayCast2D" parent="."]
rotation = 1.5708
enabled = true
cast_to = Vector2( 300, 0 )
collision_mask = 7

[node name="PlayerDetection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
position = Vector2( -3, 1 )
z_index = 1
shape = SubResource( 2 )

[node name="HurtBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource( 7 )

[node name="Explode" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Explode"]
scale = Vector2( 2, 2 )
shape = SubResource( 7 )

[node name="Muzzle" parent="." instance=ExtResource( 4 )]

[node name="Timer" type="Timer" parent="Muzzle"]
wait_time = 0.5
one_shot = true

[node name="Stats" parent="." instance=ExtResource( 5 )]
max_health = 65

[node name="WanderController" type="Node2D" parent="."]
script = ExtResource( 7 )
wander_range = 500

[node name="Timer" type="Timer" parent="WanderController"]
one_shot = true
autostart = true

[node name="Colors" parent="." instance=ExtResource( 8 )]

[node name="Occlusion" type="LightOccluder2D" parent="."]
occluder = SubResource( 5 )

[node name="Dash" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="PlayerDetection" to="PlayerDetection" method="_on_PlayerDetection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="PlayerDetection" method="_on_PlayerDetection_body_exited"]
[connection signal="timeout" from="WanderController/Timer" to="WanderController" method="_on_Timer_timeout"]
